--- a/Nesjartun.Web/Views/Shared/_Layout.cshtml
+++ b/Nesjartun.Web/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 
                     <p>Nesjartun Camping er ei lita familiedriven bedrift ved enden av Hornindalsvatnet. Plassen ligg ved Rv15/E39, ca. 8 km fra Nordfjordeid i retning Stryn. Vi tilbyr hytter, plass til telt, vogner og bubilar og utleige av båtar.</p>
                     <p>På Nesjartun bur du midt i Nordfjord, ein ideell stad for dagsturar i alle retningar, Måløy, Selje og Vestkapp, Stryn og Briksdalen, Geiranger, Ålesund og Runde for å nemne nokre.</p>
-
+                    <p>GPS koordinatar: N61&deg;54'23" E06&deg;07'11"</p>
                 </div>
             </div>
         </header>
@@ -29,14 +29,14 @@
         <div class="container">
             <footer>
                 <div class="row">
-                    <div class="col-xs-12 col-sm-6">
+                    <div class="col-xs-6 col-sm-6">
                         <p>
                             Nesjartun Camping <br />
                             Nes <br />
                             6770 Nordfjordeid
                         </p>
                     </div>
-                    <div class="col-xs-12 col-sm-6">
+                    <div class="col-xs-6 col-sm-6">
                         <p>
                             <a href="mailto:post@nesjartun.no">post@nesjartun.no</a> <br />
                             Magne: <a href="callto:004791602732">91602732</a> <br />
