--- a/Nesjartun.Web/Content/nesjartun.css
+++ b/Nesjartun.Web/Content/nesjartun.css
@@ -6572,7 +6572,13 @@ img {
 @media (min-width: 768px) {
   #header .header-inner {
     margin-left: 150px;
-    padding-top: 20px;
+    margin-top: -10px;
+  }
+}
+@media (max-width: 767px) {
+  #header .header-inner h1 {
+    margin-top: 0;
+    padding-top: 0;
   }
 }
 .content-section {
