--- a/Nesjartun.Web/Content/nesjartun.less
+++ b/Nesjartun.Web/Content/nesjartun.less
@@ -25,7 +25,13 @@ img{
     .header-inner{
         @media(min-width: @screen-sm-min){
             margin-left: 150px;
-            padding-top: 20px;
+            margin-top: -10px;
+        }
+        @media(max-width: @screen-xs-max){
+            h1{
+                margin-top: 0;
+                padding-top: 0;
+            }
         }
         padding-bottom: 30px;
     }
