--- a/Nesjartun.Web/Views/Home/Index.cshtml
+++ b/Nesjartun.Web/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
             <img src="@Url.Content("~/Content/images/IMG_7904.JPG")" alt="Oversikt av campingplassen"/>
         </section>
     </div>
-    <div class="col-xs-12 col-sm-6">
+    <div class="hidden-xs col-sm-6">
         <section class="content-section" id="contact">
             @Html.Action("Form", "Contact")
         </section>
@@ -57,6 +57,10 @@
         </section>
     </div>
 </div>
+
+<section class="content-section visible-xs" id="contact">
+    @Html.Action("Form", "Contact")
+</section>
 
 
 
