Cachejack for images

--- a/Nesjartun.Web/Views/Home/Index.cshtml
+++ b/Nesjartun.Web/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
             <p>På campingplassen har vi plass til ca 30 bubilar, vogner og telt. Vi har delt plassen opp i 4 platå, slik at du alltid har god utsikt utover vatnet.</p>
             <p>24 straumuttak, Saniteranlegg med dusj, wc og vaskerom.</p>
             <p>Det er òg mogleg å leige vaskemaskin og tørketrommel. <br />Kr. 50 pr vask/tørk.</p>
-            <img src="@Url.Content("~/Content/images/oversikt.png")" alt="Oversikt av campingplassen"/>
+            <img data-src="@Url.Content("~/Content/images/oversikt.png")" alt="Oversikt av campingplassen"/>
         </section>
     </div>
     <div class="hidden-xs col-sm-6">
